--- a/notebooks/rise.css
+++ b/notebooks/rise.css
@@ -145,7 +145,9 @@ div.plan-container {
 
 
 .md-slide.title {
-  position: relative;
-  top: -50%;
-  margin-left: 5%;
+    position: relative;
+    top: -50%;
+    margin-left: 5%;
+    font-size: 4em !important;
+    line-height: 1.6;
 }
